--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Converters\DepartmentConvertHelper.cs" />
     <Compile Include="Converters\ModelConvertHelper.cs" />
     <Compile Include="Converters\ModelConvertHelperOfBaseData.cs" />
+    <Compile Include="Converters\PersonConvertHelper.cs" />
     <Compile Include="LocationCallbacks\AlarmSubscriber.cs" />
     <Compile Include="LocationCallbacks\ILocationAlarmService.cs" />
     <Compile Include="LocationCallbacks\ILocationAlarmServiceCallback.cs" />
@@ -101,7 +102,7 @@
     <Compile Include="Locations\Services\DepartmentService.cs" />
     <Compile Include="Locations\Services\DeviceService.cs" />
     <Compile Include="Locations\Services\IEntityService.cs" />
-    <Compile Include="Locations\Services\ITreeEntityService.cs" />
+    <Compile Include="Locations\Services\PersonService.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHostHelper.cs" />
