--- a/Server/WebSite/LocationWeb/Location.WebSite.csproj
+++ b/Server/WebSite/LocationWeb/Location.WebSite.csproj
@@ -321,16 +321,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
-    </Compile>
-    <Compile Include="Services\ILocationService.cs" />
-    <Compile Include="Services\LocationService.svc.cs">
+    <Compile Include="ILocationService.cs" />
+    <Compile Include="LocationService.svc.cs">
       <DependentUpon>LocationService.svc</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
@@ -395,8 +391,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Service1.svc" />
-    <Content Include="Services\LocationService.svc" />
+    <Content Include="LocationService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -588,6 +583,10 @@
     <ProjectReference Include="..\..\..\Third\Projects\ExcelLib\ExcelLib.csproj">
       <Project>{a1b87d98-60df-4f13-976c-b776f6415626}</Project>
       <Name>ExcelLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\WebApi\NsqSharp\NsqSharp.csproj">
+      <Project>{7327244d-e163-4c35-9c1a-8dbdf06b9408}</Project>
+      <Name>NsqSharp</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\WebApi\WebApiComunication\WebApiCommunication.csproj">
       <Project>{474692d2-fc7e-4835-87a0-089bc2f88af0}</Project>
