--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -13,7 +13,7 @@
     <add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="Sqlite" connectionString="Data Source=E:\工作文件\对接文档\四会热电厂\LocationEngine\engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="Sqlite" connectionString="Data Source=engine.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
