--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Locations\Services\DepartmentService.cs" />
     <Compile Include="Locations\Services\DeviceService.cs" />
     <Compile Include="Locations\Services\IEntityService.cs" />
+    <Compile Include="Locations\Services\KKSCodeService.cs" />
     <Compile Include="Locations\Services\PosHistoryService.cs" />
     <Compile Include="Locations\Services\PosService.cs" />
     <Compile Include="Locations\Services\PersonService.cs" />
